RAS-1350 Create enrolment end point for party
